# musb

./: Cargo.toml  README.md  build.rs  todo.txt
build_src/: block.rs  build_serde.rs  config.rs  feature.rs  fieldset.rs  gen.rs  mod.rs  profile.rs
docs/: porting_guide.md
musb-readconf/: Cargo.toml  README.md
musb-readconf/src/: lib.rs
registers/blocks/: peri-std.yaml  peri_std.yaml  py32.yaml  readconf.yaml
registers/configs/: py32f07x.yaml  py32f403.yaml  std-full.yaml  std_full.yaml
registers/fieldsets/: CSR0L_std.yaml  DEVCTL_std.yaml  FIFO_std.yaml  INTRRX_std.yaml  INTRTX_std.yaml  INTRUSBE_std.yaml  RXCSRH_std.yaml  TXCSRH_std.yaml
registers/fieldsets/common_std/: DEVCTL.yaml  INTRRX.yaml  INTRRXE.yaml  INTRTX.yaml  INTRTXE.yaml  INTRUSB.yaml
registers/fieldsets/indexed-peri_std/: CONFIGDATA.yaml  TXMAXP.yaml
registers/fieldsets/indexed_peri_std/: CONFIGDATA.yaml  RXMAXP.yaml  TXMAXP.yaml
registers/profiles/: py32f07x.yaml  py32f403.yaml  std-8bep-2048.yaml  std-full.yaml  std.yaml
src/: alloc_endpoint.rs  bus.rs  common_impl.rs  control_pipe.rs  driver.rs  endpoint.rs  generated.rs  lib.rs  regs.rs
src/embassy_usb_driver_impl/: bus.rs  control_pipe.rs  driver.rs  endpoint.rs  mod.rs
src/prebuilds/: py32f07x.rs  py32f403.rs  std-full.rs
src/prebuilds/py32f07x/: _generated.rs  features.txt  info.rs  regs.rs  usb_regs.rs
src/prebuilds/py32f403/: features.txt  info.rs  regs.rs  usb_regs.rs
src/prebuilds/std/: info.rs  usb_regs.rs
src/prebuilds/std-8bep-2048/: _generated.rs  usb_regs.rs
src/usb_device_impl/: control_state.rs  mod.rs
