[package]
name = "musb"
version = "0.0.4"
edition = "2021"
authors = ["Decaday <myDecaday@outlook.com>"]
repository = "https://github.com/decaday/musb"
documentation = "https://docs.rs/musb"
homepage = "https://github.com/decaday/musb"
categories = ["embedded", "no-std", "hardware-support"]
description = "musb(Mentor USB) regs and `embassy-usb-driver` impl"
keywords = ["usb", "hal", "embedded", "no-std", "hardware-support"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
embassy-usb-driver = "0.1.0"
embassy-usb = "0.3.0"


[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0.94"

[features]
defmt = ["embassy-usb-driver/defmt", 
    "embassy-usb/defmt"
]


builtin-py32f07x = []
builtin-py32f403 = []
builtin-std-full = []

prebuild = []

[package.metadata.docs.rs]
features = ["defmt"]
targets = ["thumbv7em-none-eabihf"]
