[package]
name = "musb"
version = "0.0.4"
edition = "2021"
authors = ["Decaday <myDecaday@outlook.com>"]
repository = "https://github.com/decaday/musb"
documentation = "https://docs.rs/musb"
homepage = "https://github.com/decaday/musb"
categories = ["embedded", "no-std", "hardware-support"]
description = "musb(Mentor USB) regs and `embassy-usb-driver` impl"
keywords = ["usb", "hal", "embedded", "no-std", "hardware-support"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
embassy-usb-driver = "0.1.0"
cfg-if = {version = "1.0.0", features = ["core"]}
embassy-sync = "0.6.1"


[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0.94"

[features]
default = ["prebuild"]
defmt = ["embassy-usb-driver/defmt", 
    "embassy-sync/defmt",
]

log = ["embassy-sync/log",]


# TODO: auto-generate interal features according to profile
builtin-py32f07x = ["_ep-shared-fifo"]
builtin-py32f403 = []
builtin-std-full = []

prebuild = []

allow-ep-shared-fifo = []

# interal features
_ep-shared-fifo = []
_equal-fifo-size = []

[package.metadata.docs.rs]
features = ["defmt"]
targets = ["thumbv7em-none-eabihf"]
